2003-12-29  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/CacheTag.py: now use skunk.date.timeutil rather than
	Date.Timeutil

2003-12-27  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/ecs/xhtml.py (parse): now use HTMLParser rather than
	expat, so html entity references are now tolerated (although
	treated as strings).

2003-12-24  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/skunk/__init__.py, pylibs/skunk/date/__init__.py,
	pylibs/skunk/date/timeutil.py: new timeutil module, still rough, 
	with the goal of no longer requiring mx.DateTime; starting "skunk"
	package, with the intention of gradually moving much of pylibs
	into it, to better avoid name collisions and make installation of
	pylibs into python's normal site-packages more workable.

2003-12-18  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/Services/web/protocol.py (_processRequest): added
	ProcessResponse hook for response filtering, as prompted by patch
	from Adam DePrince.

2003-12-11  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c (critical_error): apache2
	bugfix: wrong test for return value of apr_file_open().

2003-11-30  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/Services/sessionHandler/SQLSessionStore.py
	(AbstractSQLSessionStore.getConnection): bug fix for the
	postgresql implementation -- attempting to call fetchall on a
	cursor when there are no rows is not tolerated by pypgsql.

2003-11-29  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: replace references to AE
	and AED with SkunkWeb.

	* SkunkWeb/Services/sessionHandler/PostgreSQLSessionStore.py:
	several changes so it actually works (previous version did not).

	* SkunkWeb/Services/sessionHandler/SQLSessionStore.py
	(AbstractSQLSessionStore._getPickle): fix for bytea using
	pypgsql. 

2003-11-24  Jacob Smullyan  <smulloni@bracknell.smullyan.org>
